Updated style to prevent overflow when no image on edit order page

--- a/styles/main.css
+++ b/styles/main.css
@@ -342,7 +342,7 @@ em {
 }
 
 .centerBottomColumn {
-	margin-top: 3em;
+	margin-top: 4em;
 }
 
 
